@@ -23,12 +23,12 @@ repositories {
 
 dependencies {
     compile 'org.apache.commons:commons-dbcp2:2.9.0'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
-    compile 'org.apache.logging.log4j:log4j-api:2.17.2'
-    compile 'org.apache.logging.log4j:log4j-core:2.17.2'
-    compile 'com.oracle.database.jdbc:ojdbc8:21.3.0.0'
-    compile 'org.springframework:spring-beans:5.3.10'
-    compile 'org.springframework:spring-jdbc:5.3.10'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
+    compile 'org.apache.logging.log4j:log4j-api:2.18.0'
+    compile 'org.apache.logging.log4j:log4j-core:2.18.0'
+    compile 'com.oracle.database.jdbc:ojdbc8:21.4.0.0.1'
+    compile 'org.springframework:spring-beans:5.3.11'
+    compile 'org.springframework:spring-jdbc:5.3.11'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
